--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 -r actions/requirements-actions.txt
-rasa[spacy]~=2.4.0
-rasa-sdk~=2.4.0
+
+# Sync with `rasa_version` in `.github/workflows/build_and_deploy.yml`
+rasa[spacy]==2.4.0
+
+# Sync with `rasa_sdk_version` in `.github/workflows/continuous-integration.yml`
+rasa-sdk==2.4.0
