--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -50,6 +50,29 @@ nlu:
     - no way
     - not really
 
+- intent: check_balance
+  examples: |
+    - How much money is on my account?
+    - How much money is on my [bank](account_type) account?
+    - what's my [credit card](account_type) balance?
+    - how much do i owe on my [credit card](account_type)?
+    - what is my account balance?
+    - show me my accounts
+    - what's my balance?
+    - check my [checking](account_type) account balance?
+    - how much money do i have?
+    - balance please
+
+- intent: pay_cc
+  examples: |
+    - i want to pay my credit card
+    - pay off my [emblem](credit_card)
+    - make a payment towards my [visa](credit_card) card
+    - pay a bill
+    - pay off my card
+    - make a payment
+    - i want to pay my [discover](credit_card) bill
+
 - intent: train_topics
   examples: |
     - what will we cover in training?
