Update for next module

--- a/data/stories.yml
+++ b/data/stories.yml
@@ -12,15 +12,33 @@ stories:
   - intent: train_topics
   - action: utter_training_topics
 
-- story: check balance
+- story: check balance (no account type)
   steps:
   - intent: check_balance
   - action: utter_account_balance
 
-- story: pay_cc
+- story: check balance (has account type)
+  steps:
+  - intent: check_balance
+    entities:
+      - account_type
+  - slot_was_set:
+      - account_type: bank
+  - action: utter_account_balance_type
+
+- story: pay_cc (no card specified)
   steps:
   - intent: pay_cc
   - action: utter_make_payment
+
+- story: pay_cc (card specified)
+  steps:
+  - intent: pay_cc
+    entities:
+      - credit_card
+  - slot_was_set:
+      - credit_card: emblem
+  - action: utter_make_payment_for_card
 
 - story: bot challenge
   steps:
