--- a/domain.yml
+++ b/domain.yml
@@ -13,20 +13,34 @@ intents:
   - pay_cc:
       use_entities:
       - credit_card
+      - number
 
 entities:
   - credit_card
   - account_type
+  - number
 
 slots:
   account_type:
+    type: text
+    influence_conversation: true
+  credit_card:
+    type: text
+    influence_conversation: false
+  number:
     type: any
     influence_conversation: false
-  credit_card:
+  payment_amount:
     type: any
     influence_conversation: false
 
 responses:
+  utter_ask_make_payment_form_credit_card:
+  - text: "What credit card would you like to make a payment for?"
+
+  utter_ask_make_payment_form_payment_amount:
+  - text: "How much would you like to pay for your {credit_card} card?"
+
   utter_greet:
   - text: "Hey! Welcome to your Rasa Training!"
 
@@ -46,11 +60,23 @@ responses:
   utter_make_payment:
   - text: "We'll gather more information about making a payment here."
 
+  utter_payment_thank_you:
+  - text: "Thank you for your payment of {payment_amount} towards your {credit_card}."
+
   utter_goodbye:
   - text: "Bye"
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
+
+forms:
+  make_payment_form:
+    credit_card:
+      - type: from_entity
+        entity: credit_card
+    payment_amount:
+      - type: from_entity
+        entity: number
 
 session_config:
   session_expiration_time: 60
