--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -55,9 +55,10 @@ nlu:
     - How much money is on my account?
     - How much money is on my [bank](account_type) account?
     - what's my [credit card](account_type) balance?
-    - how much do i owe on my [credit card](account_type)?
+    - how much do i owe on my [credit card account](account_type)?
     - what is my account balance?
     - show me my accounts
+    - view my [credit](account_type) accounts
     - what's my balance?
     - check my [checking](account_type) account balance?
     - how much money do i have?
@@ -70,8 +71,11 @@ nlu:
     - make a payment towards my [visa](credit_card) card
     - pay a bill
     - pay off my card
+    - pay off my [amex](credit_card) card
+    - make a payment towards my [citi](credit_card) card balance
     - make a payment
     - i want to pay my [discover](credit_card) bill
+    - pay this month's [emblem](credit_card) bill
 
 - intent: train_topics
   examples: |
@@ -90,3 +94,25 @@ nlu:
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
+
+- regex: number
+  examples: |
+    - [0-9]*
+
+- synonym: credit
+  examples: |
+    - credit card account
+    - credit card
+
+- lookup: credit_card
+  examples: |
+    - Discover
+    - Visa
+    - Mastercard
+    - Emblem
+    - Preferred
+    - Sapphire
+    - Barclays
+    - Platnium
+    - Citi
+    - Amex
