Add more training examples

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -53,6 +53,7 @@ nlu:
     - how much do i owe on my [credit card account](account_type)?
     - what is my account balance?
     - show me my accounts
+    - how much do i owe on my [card](account_type)
     - view my [credit](account_type) accounts
     - what's my balance?
     - check my [checking](account_type) account balance?
@@ -60,13 +61,15 @@ nlu:
     - balance please
 - intent: pay_cc
   examples: |
-    - i want to pay my credit card
+    - i want to pay my [credit card](account_type)
     - pay off my [emblem](credit_card)
-    - make a payment towards my [visa](credit_card) card
+    - make a payment towards my [visa](credit_card) [card](account_type)
     - pay a bill
-    - pay off my card
-    - pay off my [amex](credit_card) card
-    - make a payment towards my [citi](credit_card) card balance
+    - pay off my [card](account_type)
+    - make a [200](number) dollar payment towards my [card](account_type)
+    - pay off my [amex](credit_card) [card](account_type)
+    - make a payment towards my [citi](credit_card) [card](account_type) balance
+    - pay [100](number) dollars towards my [card](account_type)
     - make a payment
     - i want to pay my [discover](credit_card) bill
     - pay this month's [emblem](credit_card) bill
@@ -90,9 +93,10 @@ nlu:
   examples: |
     - credit card account
     - credit card
+    - card
 - regex: number
   examples: |
-    - [0-9]*
+    - \b\d\b
 - lookup: credit_card
   examples: |
     - Discover
