--- a/data/rules.yml
+++ b/data/rules.yml
@@ -11,3 +11,8 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
+- rule: Handle NLU fallback
+  steps:
+  - intent: nlu_fallback
+  - action: utter_please_rephrase
