--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -16,7 +16,6 @@ nlu:
     - goodmorning
     - goodevening
     - good afternoon
-
 - intent: goodbye
   examples: |
     - good afternoon
@@ -30,7 +29,6 @@ nlu:
     - see you around
     - bye bye
     - see you later
-
 - intent: affirm
   examples: |
     - yes
@@ -39,7 +37,6 @@ nlu:
     - of course
     - that sounds good
     - correct
-
 - intent: deny
   examples: |
     - no
@@ -49,7 +46,6 @@ nlu:
     - don't like that
     - no way
     - not really
-
 - intent: check_balance
   examples: |
     - How much money is on my account?
@@ -58,34 +54,26 @@ nlu:
     - how much do i owe on my [credit card account](account_type)?
     - what is my account balance?
     - show me my accounts
+    - how much do i owe on my [card](account_type)
     - view my [credit](account_type) accounts
     - what's my balance?
     - check my [checking](account_type) account balance?
     - how much money do i have?
     - balance please
-
 - intent: pay_cc
   examples: |
-    - i want to pay my credit card
+    - i want to pay my [credit card](account_type)
     - pay off my [emblem](credit_card)
-    - make a payment towards my [visa](credit_card) card
+    - make a payment towards my [visa](credit_card) [card](account_type)
     - pay a bill
-    - pay off my card
-    - pay off my [amex](credit_card) card
-    - make a payment towards my [citi](credit_card) card balance
+    - pay off my [card](account_type)
+    - make a [200](number) dollar payment towards my [card](account_type)
+    - pay off my [amex](credit_card) [card](account_type)
+    - make a payment towards my [citi](credit_card) [card](account_type) balance
+    - pay [100](number) dollars towards my [card](account_type)
     - make a payment
     - i want to pay my [discover](credit_card) bill
     - pay this month's [emblem](credit_card) bill
-
-- intent: inform
-  examples: |
-    - [$1000](number)
-    - [100](number)
-    - [500](number)
-    - [Mastercard](credit_card)
-    - [Discover](credit_card) card
-    - my [visa](credit_card)
-
 - intent: train_topics
   examples: |
     - what will we cover in training?
@@ -96,23 +84,28 @@ nlu:
     - will we learn about entities?
     - topics
     - subjects
-
+- intent: stop
+  examples: |
+    - stop
+    - cancel
+    - exit
+    - quit
+    - stop this
+    - actually no
 - intent: bot_challenge
   examples: |
     - are you a bot?
     - are you a human?
     - am I talking to a bot?
     - am I talking to a human?
-
-- regex: number
-  examples: |
-    - [0-9]*
-
 - synonym: credit
   examples: |
     - credit card account
     - credit card
-
+    - card
+- regex: number
+  examples: |
+    - \b\d\b
 - lookup: credit_card
   examples: |
     - Discover
