Adjust rasa version to install
Install PR #8180

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 
 # Sync with files:
 # (-) .github/workflows/build_and_deploy.yml (`rasa_version`)
-rasa[spacy]==2.4.0
+rasa[spacy] @ git+git://github.com/RasaHQ/rasa@twilio-voice-connector#egg=rasa
 
 # Sync with files:
 # (-) .github/workflows/continuous-integration.yml (`rasa_sdk_version`)
