Add twilio voice channel

--- a/credentials.yml
+++ b/credentials.yml
@@ -31,3 +31,5 @@ rest:
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
   url: "http://localhost:5002/api"
+
+twilio_voice:
