--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -66,13 +66,15 @@ nlu:
 
 - intent: pay_cc
   examples: |
-    - i want to pay my credit card
+    - i want to pay my [credit card](account_type)
     - pay off my [emblem](credit_card)
-    - make a payment towards my [visa](credit_card) card
+    - make a payment towards my [visa](credit_card) [card](account_type)
     - pay a bill
-    - pay off my card
-    - pay off my [amex](credit_card) card
-    - make a payment towards my [citi](credit_card) card balance
+    - pay off my [card](account_type)
+    - make a [200](number) dollar payment towards my [card](account_type)
+    - pay off my [amex](credit_card) [card](account_type)
+    - make a payment towards my [citi](credit_card) [card](account_type) balance
+    - pay [100](number) dollars towards my [card](account_type)
     - make a payment
     - i want to pay my [discover](credit_card) bill
     - pay this month's [emblem](credit_card) bill
@@ -97,7 +99,7 @@ nlu:
 
 - regex: number
   examples: |
-    - [0-9]*
+    - \b\d\b
 
 - synonym: credit
   examples: |
