--- a/domain.yml
+++ b/domain.yml
@@ -76,9 +76,11 @@ forms:
     credit_card:
       - type: from_entity
         entity: credit_card
+      - type: from_text
     payment_amount:
       - type: from_entity
         entity: number
+      - type: from_text
 
 session_config:
   session_expiration_time: 60
