--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,7 @@ pipeline:
     epochs: 100
     constrain_similarities: true
     model_confidence: cosine
+    entity_recognition: false
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
