Update for Rasa 2.4

--- a/config.yml
+++ b/config.yml
@@ -22,13 +22,13 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
     entity_recognition: false
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
@@ -44,5 +44,5 @@ policies:
     max_history: 5
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
   - name: RulePolicy
