--- a/config.yml
+++ b/config.yml
@@ -23,13 +23,13 @@ pipeline:
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
     entity_recognition: false
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
   - name: FallbackClassifier
     threshold: 0.3
     ambiguity_threshold: 0.1
@@ -45,5 +45,5 @@ policies:
     max_history: 5
     epochs: 100
     constrain_similarities: true
-    model_confidence: cosine
+    model_confidence: linear_norm
   - name: RulePolicy
