Start Rasa X when container starts.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ image:
 
 tasks:
   - before: 'rasa train'
-
+    command: 'RASA_X_PASSWORD=password rasa x --no-prompt & disown'
 ports:
   - port: 5002
   - port: 5005
