options to control transcription quality

--- a/credentials.yml
+++ b/credentials.yml
@@ -33,3 +33,6 @@ rasa:
   url: "http://localhost:5002/api"
 
 twilio_voice:
+  speech_model: "phone_call"
+  speech_timeout: "auto"
+  enhanced: "false"
