--- a/domain.yml
+++ b/domain.yml
@@ -266,6 +266,9 @@ responses:
   - text: "I can help you with your financial accounts. \nYou can ask me things like:\
       \ \n- What's my account balance? \n- Pay off my credit card \n- What did I spend\
       \ at Target last month? \n- I need to transfer money"
+  - text: I can help you with checking your account balance, paying your credit cards, analyzing your transactions, tranferring money and more!
+          How can I help you today?
+    channel: twilio_voice
 actions:
 - action_session_start
 - action_restart
