Recognize incoming/outgoing as transaction types
Used in utter_ask_transaction_search_form_search_type for voice

--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -332,6 +332,8 @@ nlu:
     - percy donald
     - danIelle smilanich
     - [Gringtos](credit_card)
+    - [incoming]{"entity": "search_type", "value": "deposit"}
+    - [outgoing]{"entity": "search_type", "value": "spend"}
 - intent: pay_cc
   examples: |
     - I would like to pay the [minimum balance](amount-of-money) on my [embelm](credit_card) [card](account_type)
